# kapchan-v2

./: .env  .env.example  .gitignore  Cargo.toml  README.md  cargo.toml
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/2023-11-05-175757_system_users/: down.sql  up.sql
backend/migrations/2023-11-06-122640_files/: down.sql  up.sql
backend/migrations/2023-11-06-135742_boards/: down.sql  up.sql
backend/migrations/2023-11-09-225720_users/: up.sql
backend/migrations/2023-11-10-175726_user_sessions/: up.sql
backend/migrations/2023-11-19-193642_user_applications/: down.sql  up.sql
backend/migrations/2023-12-08-085526_boards/: down.sql  up.sql
backend/migrations/2023-12-27-104454_files/: up.sql
backend/migrations/2024-01-29-111841_sessions/: up.sql
backend/migrations/2024-02-02-153508_threads/: down.sql  up.sql
backend/migrations/2024-02-02-154310_posts/: up.sql
backend/migrations/2024-07-09-130113_users/: up.sql
backend/migrations/2024-07-09-131031_sessions/: up.sql
backend/migrations/2024-07-09-132305_user_applications/: up.sql
backend/migrations/2024-07-09-135143_boards/: up.sql
backend/migrations/2024-07-11-074655_threads/: down.sql  up.sql
backend/migrations/2024-07-11-085603_posts/: up.sql
backend/migrations/2024-07-19-165022_posts/: down.sql  up.sql
backend/migrations/2024-07-20-103844_threads/: up.sql
backend/src/: board_service.rs  boards.rs  files.rs  main.rs  posts.rs  schema.rs  server.rs  sessions.rs  threads.rs  user.rs  user_service.rs  users.rs  utils.rs  ws_server.rs
backend/src/board_service/: board.rs  mod.rs  post.rs
backend/src/models/: users.rs
backend/src/server/: service.rs  session.rs
backend/src/user_service/: application.rs  authentication.rs  session.rs  user.rs
backend/src/ws_server/: session.rs
frontend/: Cargo.toml  bun.lockb  index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.tsx  index.css  index.jsx  index.tsx  lib.rs
frontend/src/components/: ApplicationBrowser.css  ApplicationBrowser.tsx  BoardBrowser.css  BoardBrowser.tsx  Header.css  Header.tsx  Modal.jsx  RadioButton.jsx  Sidebar.css  Sidebar.tsx  SvgAnchor.jsx  UserBrowser.css  UserBrowser.tsx
frontend/src/handlers/: index.rs
frontend/src/pages/: Admin.css  Admin.jsx  Admin.tsx  Application.css  Application.tsx  Board.jsx  Boards.tsx  Home.css  Home.tsx  Login.css  Login.jsx  Login.tsx  Placeholder.tsx  Rules.tsx  Settings.tsx  Thread.jsx
frontend/src/scripts/: board_service.tsx  boards.js  connection.js  connection.ts  connection_manager.tsx  cookies.tsx  credentials.js  credentials.ts  service.tsx  session.js  session.ts  user.js  user.ts  user.tsx  user_service.js  user_service.tsx  utils.js  utils.ts
frontend/src/styles/: fuji.css  kapchan.css
migrations/2024-12-13-151546_users/: up.sql
migrations/2024-12-15-140953_applications/: down.sql  up.sql
migrations/2024-12-16-130350_boards/: down.sql  up.sql
src/: main.rs  schema.rs
templates/: 404.stpl  admin.stpl  application_review.stpl  applications.stpl  apply.stpl  banned.stpl  board.stpl  chat.stpl  forbidden.stpl  index.stpl  login.stpl  register.stpl  thread.stpl  user.stpl  users.stpl
(+100 files in other folders)
