[package]
name = "kapchan"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4"
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-multipart = "0.7.2"
base64 = "0.22.1"
captcha = "0.0.9"
chrono = { version = "0.4.31", features = ["serde"] }
chrono-tz = "0.10.0"
deadpool = "0.10.0"
diesel = { version = "2.1.3", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "mysql"] }
dotenvy = "0.15.7"
image = { version = "0.25.6", features = ["avif-native"]}
itertools = "0.13.0"
mime = "0.3.17"
password-hash = "0.5.0"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = "0.6.4"
regex = "1.11.1"
sailfish = "0.9"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.140"
validator = { version = "0.18.1", features = ["derive"] }
sha2 = "0.10.8"
tokio = "1.42.0"
