[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
argon2 = "0.5.2"
async-trait = "0.1.74"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool = "0.10.0"
diesel = { version = "2.1.3", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "mysql"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
jsonwebtoken = "9.1.0"
log = "0.4.20"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
