[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.31", features = ["serde"] }
deadpool = "0.10.0"
diesel = { version = "2.1.3", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "mysql"] }
sailfish = "0.9"
serde = { version = "1.0.192", features = ["derive"] }